php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30868 PHP Fails to compile when mbstring is enabled
Submitted: 2004-11-23 08:45 UTC Modified: 2005-02-21 11:20 UTC
From: touv at ouvaton dot org Assigned: moriyoshi (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.0.2 OS: HP-UX 11
Private report: No CVE-ID: None
 [2004-11-23 08:45 UTC] touv at ouvaton dot org
Description:
------------
% export CC=cc
% export CFLAGS="-O +DS2.0 +DA2.0W"
% ./configure --with-libxml-dir=/usr/local/libs/libxml2-2.6.9-64 --enable-mbstring
(...)
% make
(...)
cc  -DNOT_RUBY -DHAVE_CONFIG_H -Iext/mbstring/ -I/tmp/php-5.0.2/ext/mbstring/ -DPHP_ATOM_INC -I/tmp/php-5.0.2/include -I/tmp/php-5.0.2/main -I/tmp/php-5.0.2 -I/tmp/php-5.0.2/Zend -I/usr/local/libs/libxml2-2.6.9-64/include/libxml2 -I/usr/local/libs/libiconv-1.9.1-64/include -I/tmp/php-5.0.2/ext/mbstring/oniguruma -I/tmp/php-5.0.2/ext/mbstring/libmbfl -I/tmp/php-5.0.2/ext/mbstring/libmbfl/mbfl  -I/usr/include -I/usr/include/X11 -I/usr/contrib/include -I/usr/contrib/include/X11 -I/usr/local/libs/zlib-1.1.4-64/include -I/usr/local/libs/libxml2-2.6.9-64/include -I/tmp/php-5.0.2/TSRM  -w -O +DS2.0 +DA2.0W  -c /tmp/php-5.0.2/ext/mbstring/php_mbregex.c -o ext/mbstring/php_mbregex.o  && echo > ext/mbstring/php_mbregex.lo
cc: "/tmp/php-5.0.2/ext/mbstring/php_mbregex.c", line 488: error 1649: Illegal integer-pointer combination for <.
cc: "/tmp/php-5.0.2/ext/mbstring/php_mbregex.c", line 488: error 1563: Expression in if must be scalar.
*** Error exit code 1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-21 11:20 UTC] moriyoshi@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC