- Fix bug #30868 (evaluated pointer comparison in mbregex causes compile   failure).